style: proper line height for description

--- a/apps/web/src/app/core/pages/watch/watch.component.scss
+++ b/apps/web/src/app/core/pages/watch/watch.component.scss
@@ -34,7 +34,7 @@
       background-color: rgba(variables.$clr-dusty-gray, 0.05);
       font-size: variables.$fs-sm;
       border: 1px solid rgba(variables.$clr-dusty-gray, 0.1);
-      line-height: 1.5;
+      line-height: 24px;
       box-shadow: var(--shadow);
 
       .video-info {
