chore: liked videos section in you page

--- a/apps/web/src/app/core/components/playlist-card/playlist-card.component.scss
+++ b/apps/web/src/app/core/components/playlist-card/playlist-card.component.scss
@@ -142,7 +142,7 @@
 
     .playlist-link {
       margin-top: variables.$spacing-sm;
-      color: variables.$clr-snow;
+      color: initial;
       &:hover {
         text-decoration: underline;
       }
