--- a/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.scss
+++ b/apps/web/src/app/core/components/watch-page-channel-bar/watch-page-channel-bar.component.scss
@@ -2,6 +2,11 @@
 @use '../../../../styles/mixins';
 
 .channel-bar {
+  @include mixins.flex-cv;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: variables.$spacing-sm;
+
   .owner {
     @include mixins.flex-cv;
     gap: variables.$spacing-sm;
@@ -44,6 +49,38 @@
         line-height: 0;
         margin-top: calc(variables.$spacing-sm + 4px);
       }
+    }
+  }
+
+  .video-actions {
+    margin-left: auto;
+    @include mixins.flex-cv;
+    gap: variables.$spacing-sm;
+
+    .button-group {
+      flex-shrink: 0;
+
+      button {
+        border-radius: 0;
+        gap: 5px;
+        // border: 1px;
+        padding: variables.$spacing-sm variables.$spacing-normal;
+
+        &:first-child {
+          border-top-left-radius: variables.$radius-rounded;
+          border-bottom-left-radius: variables.$radius-rounded;
+        }
+        &:last-child {
+          border-left: 0;
+          border-top-right-radius: variables.$radius-rounded;
+          border-bottom-right-radius: variables.$radius-rounded;
+        }
+      }
+    }
+
+    .options {
+      border-radius: variables.$radius-rounded;
+      aspect-ratio: 1 / 1;
     }
   }
 }
