--- a/apps/web/src/styles/_normalize.scss
+++ b/apps/web/src/styles/_normalize.scss
@@ -37,7 +37,8 @@ main {
 }
 
 h1 {
-  font-size: 2em;
+  font-weight: variables.$fw-semibold;
+  font-size: 1.7em;
   margin: 0.67em 0;
   margin-top: 0;
 }
