--- a/apps/web/src/app/feed/components/subscription-card/subscription-card.component.scss
+++ b/apps/web/src/app/feed/components/subscription-card/subscription-card.component.scss
@@ -1,5 +1,5 @@
-@use '../../../../../styles/variables';
-@use '../../../../../styles/mixins';
+@use '../../../../styles/variables';
+@use '../../../../styles/mixins';
 
 :host {
   --card-hovered-background: #{variables.$clr-snow};
