--- a/apps/web/src/app/feed/pages/you-page/you-page.component.scss
+++ b/apps/web/src/app/feed/pages/you-page/you-page.component.scss
@@ -1,5 +1,5 @@
-@use '../../../../../styles/variables';
-@use '../../../../../styles/mixins';
+@use '../../../../styles/variables';
+@use '../../../../styles/mixins';
 
 :host {
   --section-header-border: #e5e5e5;
