feat: toast component design

--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -3,4 +3,5 @@
 @use './styles/normalize';
 @use './styles/components';
 @use './styles/utilities';
-@import "@angular/cdk/overlay-prebuilt.css";
+@import '@angular/cdk/overlay-prebuilt.css';
+
