chore: video options component

--- a/apps/web/src/app/watch/components/watch-page-channel-bar/watch-page-channel-bar.component.html
+++ b/apps/web/src/app/watch/components/watch-page-channel-bar/watch-page-channel-bar.component.html
@@ -26,8 +26,6 @@
       <app-share-button [videoId]="video._id" />
     </div>
 
-    <button class="button ghost options">
-      <i class="bx bx-dots-vertical-rounded sm"></i>
-    </button>
+    <app-video-options [videoId]="video._id" />
   </div>
 </div>
