chore: add comment box and comment form component

--- a/apps/web/src/app/watch/pages/watch/watch-page.component.html
+++ b/apps/web/src/app/watch/pages/watch/watch-page.component.html
@@ -14,6 +14,7 @@
           </div>
           <app-expandable-text [text]="video.description" [id]="video._id" />
         </div>
+        <app-comment-box [videoId]="video._id" />
       </div>
     </div>
     <div class="recommendations">
