refactor: rename watch-page-channel-bar to channel-bar

--- a/apps/web/src/app/watch/pages/watch/watch-page.component.html
+++ b/apps/web/src/app/watch/pages/watch/watch-page.component.html
@@ -4,7 +4,7 @@
       <app-video-player [videoUrl]="video.source.secure_url" />
       <div>
         <h1 class="video-title">{{ video.title }}</h1>
-        <app-watch-page-channel-bar [video]="video" />
+        <app-channel-bar [video]="video" />
         <div class="video-description">
           <div class="video-info">
             <div>
