--- a/apps/web/src/app/watch/pages/watch/watch-page.component.html
+++ b/apps/web/src/app/watch/pages/watch/watch-page.component.html
@@ -14,7 +14,11 @@
           </div>
           <app-expandable-text [text]="video.description" [id]="video._id" />
         </div>
-        <app-comment-box [videoId]="video._id" />
+        @defer (on viewport) {
+          <app-comment-box [videoId]="video._id" />
+        } @placeholder {
+          <p>Loading comments</p>
+        }
       </div>
     </div>
     <div class="recommendations">
