--- a/apps/web/src/styles/_components.scss
+++ b/apps/web/src/styles/_components.scss
@@ -56,8 +56,9 @@ textarea {
 .dark {
   input,
   select,
-  text-area {
+  textarea {
     @include mixins.input-dark;
+    resize: none;
   }
 }
 
