chore: added a loading indicator in place of defer placeholder

--- a/apps/web/src/app/watch/pages/watch/watch-page.component.html
+++ b/apps/web/src/app/watch/pages/watch/watch-page.component.html
@@ -17,7 +17,7 @@
         @defer (on viewport) {
           <app-comment-box [videoId]="video._id" />
         } @placeholder {
-          <p>Loading comments</p>
+          <app-svg-loader />
         }
       </div>
     </div>
