--- a/apps/web/src/app/watch/components/comment-box/comment-box.component.html
+++ b/apps/web/src/app/watch/components/comment-box/comment-box.component.html
@@ -1,12 +1,12 @@
-<section class="comment-box">
-  <div class="comment-box-heading">
-    <h3>Comments</h3>
-    <span class="badge">{{ 1200 | abbreviateNumber }}</span>
-  </div>
-  <app-comment-form [videoId]="videoId" />
+@if (comments$ | async; as comments) {
+  <section class="comment-box">
+    <div class="comment-box-heading">
+      <h3>Comments</h3>
+      <span class="badge">{{ comments.totalDocs }}</span>
+    </div>
+    <app-comment-form [videoId]="videoId" />
 
-  <div class="comments">
-    @if (comments$ | async; as comments) {
+    <div class="comments">
       <ul>
         @for (comment of comments.comments; track comment._id) {
           <li>
@@ -14,6 +14,6 @@
           </li>
         }
       </ul>
-    }
-  </div>
-</section>
+    </div>
+  </section>
+}
