chore: replace links in string with the anchor tags

--- a/apps/web/src/app/shared/components/comment/comment.component.html
+++ b/apps/web/src/app/shared/components/comment/comment.component.html
@@ -29,7 +29,7 @@
 
   <div class="comment-content">
     <app-expandable-text
-      [text]="comment.content"
+      [text]="comment.content | replaceLinks"
       id="comment-{{ comment._id }}"
     />
   </div>
