--- a/apps/web/src/app/watch/components/comment-form/comment-form.component.scss
+++ b/apps/web/src/app/watch/components/comment-form/comment-form.component.scss
@@ -16,7 +16,7 @@ form {
   label {
     color: inherit;
     font-weight: variables.$fw-semibold;
-    margin-bottom: calc(variables.$spacing-sm / 2);
+    margin-block: calc(variables.$spacing-sm / 2);
   }
 
   input {
