chore: remove spacing from .alert class

--- a/apps/web/src/app/auth/pages/sign-in/sign-in.component.html
+++ b/apps/web/src/app/auth/pages/sign-in/sign-in.component.html
@@ -12,11 +12,13 @@
       placeholder="Email address"
     />
     @if (form.submitted) {
-      <app-field-error
-        [control]="loginForm.get('email')"
-        fieldName="Email"
-        id="email-error"
-      />
+      <div class="error">
+        <app-field-error
+          [control]="loginForm.get('email')"
+          fieldName="Email"
+          id="email-error"
+        />
+      </div>
     }
   </div>
   <div>
