--- a/apps/web/src/app/channel/channel.component.html
+++ b/apps/web/src/app/channel/channel.component.html
@@ -28,7 +28,7 @@
           <p>{{ channel.totalSubscribers | abbreviateNumber }} subscribers</p>
           <app-subscribe-button
             [channelId]="channel._id"
-            [isSubscribed]="channel.isSubscribed"
+            [isSubscribed]="isSubscribed"
           />
         </div>
       </div>
@@ -39,10 +39,42 @@
 <section>
   <nav class="channel-nav">
     <ul class="channel-menu" cdkMenuBar>
-      <li><a class="active" href="http://" cdkMenuItem>Home</a></li>
-      <li><a href="http://" cdkMenuItem>Videos</a></li>
-      <li><a href="http://" cdkMenuItem>Playlists</a></li>
-      <li><a href="http://" cdkMenuItem>About</a></li>
+      <li>
+        <a
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          [routerLink]="['/c', username]"
+          cdkMenuItem
+          >Home</a
+        >
+      </li>
+      <li>
+        <a
+          [routerLink]="['/c', username, 'videos']"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          cdkMenuItem
+          >Videos</a
+        >
+      </li>
+      <li>
+        <a
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          [routerLink]="['/c', username, 'playlists']"
+          cdkMenuItem
+          >Playlists</a
+        >
+      </li>
+      <li>
+        <a
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          [routerLink]="['/c', username, 'about']"
+          cdkMenuItem
+          >About</a
+        >
+      </li>
     </ul>
   </nav>
   <router-outlet />
