chore: render video and channel on server

--- a/apps/web/src/app/channel/channel.component.html
+++ b/apps/web/src/app/channel/channel.component.html
@@ -6,6 +6,7 @@
           [ngSrc]="channel.banner.public_id"
           width="1280"
           height="211"
+          priority
           alt="{{ channel.displayName }}'s Banner"
         />
       }
