--- a/apps/web/src/app/watch/components/channel-bar/channel-bar.component.html
+++ b/apps/web/src/app/watch/components/channel-bar/channel-bar.component.html
@@ -16,7 +16,7 @@
     <div>
       <app-subscribe-button
         [channelId]="video.owner._id"
-        [isSubscribed]="video.owner.isSubscribed"
+        [isSubscribed]="isSubscribed"
       />
     </div>
   </div>
