--- a/apps/web/src/app/channel/pages/videos-page/videos-page.component.html
+++ b/apps/web/src/app/channel/pages/videos-page/videos-page.component.html
@@ -1,1 +1,6 @@
-<h2>Videos</h2>
+<h2 class="sr-only">Videos</h2>
+<app-item-grid>
+  @for (video of videos | async; track video._id) {
+    <app-video-card [video]="video" />
+  }
+</app-item-grid>
