--- a/apps/web/src/app/core/components/sidebar/sidebar.component.html
+++ b/apps/web/src/app/core/components/sidebar/sidebar.component.html
@@ -15,6 +15,9 @@
 
       <span>Void Video</span>
     </a>
+    <button (click)="toggleSidebar()" class="button ghost icon toggle-button">
+      <i class="bx bx-dock-left sm"></i>
+    </button>
   </div>
 
   <div>
