--- a/apps/web/src/app/core/components/sidebar/sidebar.component.scss
+++ b/apps/web/src/app/core/components/sidebar/sidebar.component.scss
@@ -5,7 +5,6 @@
   --sidebar-background: #{variables.$clr-snow};
   --active-menu-btn-clr: #{variables.$clr-dark-void};
   --sidebar-scrollbar-clr: #{variables.$clr-dusty-gray};
-  --menu-item-focused-bg: #{variables.$clr-gray-smooth};
 
   width: variables.$sidebar-width;
   flex-shrink: 0;
@@ -20,7 +19,6 @@
   :host {
     --sidebar-background: #{variables.$clr-dark-void};
     --active-menu-btn-clr: #{variables.$clr-snow};
-    --menu-item-focused-bg: #{variables.$clr-gray-smooth-dark};
   }
 }
 
@@ -79,7 +77,6 @@ aside {
         margin-bottom: variables.$spacing-lg;
 
         > .menu-title {
-          text-transform: uppercase;
           font-weight: variables.$fw-semibold;
           margin-top: 0;
           color: variables.$clr-dusty-gray;
@@ -122,7 +119,7 @@ aside {
             }
 
             &:focus-visible {
-              background-color: var(--menu-item-focused-bg);
+              background-color: rgba(variables.$clr-dusty-gray, 0.1);
               outline: none;
               color: var(--active-menu-btn-clr);
             }
