chore: add scroll gutter and change sidebar state on view init

--- a/apps/web/src/styles/_normalize.scss
+++ b/apps/web/src/styles/_normalize.scss
@@ -23,7 +23,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // scrollbar-gutter: stable;
+  scrollbar-gutter: stable;
 }
 
 body {
